scrolling overflow fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,12 @@ body {
   margin: auto;
   box-shadow: 0 6px 25px rgba(0, 0, 0, 0.15);
   transition: background 0.4s ease;
+
+  /** stronger fix **/
+  max-width: 350px;
+  width: 100%;
+  margin: auto;
+  box-sizing: border-box; /* ensures padding stays inside width */
 }
 
 /* -------- HEADERS -------- */
